...
        key: scaffoldKey,
        backgroundColor: Colors.white,
        appBar: AppBar(
          backgroundColor: Colors.white,
          automaticallyImplyLeading: false,
          leading: FlutterFlowIconButton(
            key: const ValueKey('event details back button'),
            borderColor: Colors.transparent,
            borderRadius: 30.0,
            borderWidth: 1.0,
            buttonSize: 60.0,
            icon: const Icon(
              key: ValueKey('event details back button'),
              Icons.arrow_back_rounded,
              color: Color(0xFF101213),
              size: 30.0,
            ),
            onPressed: () async {
              context.goNamed('MainPage');
            },
          ),
          actions: const [],
          centerTitle: true,
          elevation: 0.0,
        ),
        body: SafeArea(
          top: true,
          child: Column(
            key: const ValueKey('eventPage'),
            mainAxisSize: MainAxisSize.max,
            children: [
              Align(
                alignment: const AlignmentDirectional(0.0, 0.01),
                child: Padding(
                  padding: const EdgeInsets.all(12.0),
...
                                              ),
                                            ),
                                          );
                                        }
                                        final stackUserRecord = snapshot.data!;
                                        return Stack(
                                          key: const ValueKey('Stack_ik57'),
                                          children: [
                                            Align(
                                              alignment: const AlignmentDirectional(
                                                  0.0, 0.0),
                                              child: Padding(
                                                padding: const EdgeInsetsDirectional
...
                                                  hoverColor:
                                                      Colors.transparent,
                                                  highlightColor:
                                                      Colors.transparent,
                                                  onTap: () async {
                                                    context.pushNamed(
                                                      'userPage',
                                                      queryParameters: {
                                                        'user': serializeParam(
                                                          containerEventRecord
                                                              .creator,
                                                          ParamType
                                                              .DocumentReference,
...
                                          ),
                                        });
                                      },
                                      value: containerEventRecord.likedBy
                                          .contains(currentUserReference),
                                      onIcon: Icon(
                                        key: const ValueKey('likeEvent-on'),
                                        Icons.favorite,
                                        color: FlutterFlowTheme.of(context)
                                            .primary,
                                        size: 25.0,
                                      ),
                                      offIcon: Icon(
                                        key: const ValueKey('likeEvent-off'),
                                        Icons.favorite_border,
                                        color: FlutterFlowTheme.of(context)
                                            .secondaryText,
                                        size: 25.0,
                                      ),
                                    ),
...
                                mainAxisAlignment: MainAxisAlignment.center,
                                children: [
                                  Padding(
                                    padding: const EdgeInsetsDirectional.fromSTEB(
                                        0.0, 0.0, 5.0, 20.0),
                                    child: FFButtonWidget(
                                      key: const ValueKey('editEventButton'),
                                      onPressed: () async {
                                        context.pushNamed(
                                          'EditAction',
                                          queryParameters: {
                                            'eventID': serializeParam(
                                              widget.eventID,
...
