...
    },
    'bjvklmo0': {
      'en': 'Cloth Donation',
      'pt': 'Doação de Roupa',
    },
    'ijdg0psw': {
      'en': 'Community',
      'pt': 'Comunidade',
    },
    'x1pu5lka': {
      'en': 'Cultural',
      'pt': 'Cultura',
    },
...
    },
    '2dvomm90': {
      'en': 'Confirm Password',
      'pt': 'Confirme sua senha',
    },
    'lqehfxmv': {
      'en': 'Email is required',
      'pt': 'O e-mail é obrigatório',
    },
    'tl9umto4': {
      'en': 'Invalid email',
      'pt': 'E-mail inválido',
    },
...
    },
    '4ig3bvmj': {
      'en': 'Please choose an option from the dropdown',
      'pt': 'Escolha uma opção do menu',
    },
    'kcbl1g2t': {
      'en': 'Password is required',
      'pt': 'Senha é obrigatória',
    },
    'n05kjgp0': {
      'en': 'Password is required',
      'pt': 'Senha é obrigatória',
    },
...
    },
    'rozhjcrk': {
      'en': 'Edit event',
      'pt': 'Editar evento',
    },
    '3kborjfl': {
      'en': 'Check participants',
      'pt': 'Ver participantes',
    },
    'yz89g2n6': {
      'en': 'Home',
      'pt': 'Casa',
    },
...
      'pt': 'Configurações',
    },
  },
  // CheckParticipants
  {
    'n3b301zr': {
      'en': 'Total of participants',
      'pt': 'Total de participantes',
    },
    'xqwewe04': {
      'en': 'Check event \nparticipants',
      'pt': 'Verificar participantes\ndo evento',
    },
...
    '9f98vih9': {
      'en': 'Edit Event',
      'pt': 'Editar evento',
    },
    '9t0fcwpa': {
      'en':
          'Fill out the information below to change your volunteering initiative',
      'pt':
          'Preencha as informações abaixo para alterar sua iniciativa de voluntariado',
    },
    '4nqkpq6e': {
      'en': 'Action name...',
      'pt': 'Nome da ação...',
...
