...
                ),
              ),
              Container(
                width: double.infinity,
                color: Colors.white,
                child: ExpandableNotifier(
                  key: const ValueKey('filters'),
                  controller: _model.expandableController,
                  child: ExpandablePanel(
                    header: Text(
                      FFLocalizations.of(context).getText(
                        'qn9w3qgk' /* Filters */,
                      ),
...
                                      ParamType.String,
                                    ),
                                  }.withoutNulls,
                                );
                              },
                              child: Card(
                                key: const ValueKey('eventCard'),
                                clipBehavior: Clip.antiAliasWithSaveLayer,
                                color: FlutterFlowTheme.of(context)
                                    .secondaryBackground,
                                elevation: 4.0,
                                shape: RoundedRectangleBorder(
                                  borderRadius: BorderRadius.circular(8.0),
...
